--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "url": ""
   },
   "engines": {
-    "node": "~0.6.10"
+    "node": "~0.6.10 || 0.8 || 0.9"
   },
   "scripts": {
-    "start": "brunch watch --server"
+    "start": "brunch watch --server",
+    "test": "brunch test"
   },
   "dependencies": {
-    "javascript-brunch": "1.0.x || 1.1.x",
-    "coffee-script-brunch": "1.0.x || 1.1.x",
+    "javascript-brunch": ">= 1.0 < 1.5",
+    "coffee-script-brunch": ">= 1.0 < 1.5",
 
-    "css-brunch": "1.0.x || 1.1.x",
-    "stylus-brunch": "1.0.x || 1.1.x",
+    "css-brunch": ">= 1.0 < 1.5",
+    "stylus-brunch": ">= 1.0 < 1.5",
 
-    "handlebars-brunch": "1.0.x || 1.1.x",
-    
-    "uglify-js-brunch": "1.0.x || 1.1.x",
-    "clean-css-brunch": "1.0.x || 1.1.x"
+    "handlebars-brunch": ">= 1.0 < 1.5",
+
+    "uglify-js-brunch": ">= 1.0 < 1.5",
+    "clean-css-brunch": ">= 1.0 < 1.5"
   },
   "devDependencies": {
-    "mocha": "0.14.0",
-    "expect.js": "0.1.2"
+    "chai": "1.2.0",
+    "sinon": "1.4.2",
+    "sinon-chai": "2.1.2"
   }
 }
